[package]
name = "carla-ackermann"
version = "0.1.0"
edition = "2021"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Vehicle controller for Carla simulator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NEWSLabNTU/carla-ackermann"
repository = "https://github.com/NEWSLabNTU/carla-ackermann"
documentation = "https://docs.rs/carla-ackermann/"

[dependencies]
carla = "0.6.0"
noisy_float = "0.2.0"
pid = "3.0.0"

[dev-dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
